--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,20 @@
   },
   "chrome_url_overrides": {
     "newtab": "newtab.html"
-  }
+  },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+I",
+        "mac": "Command+I"
+      },
+      "description": "Toggle note widget"
+    }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["styles.css"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
